--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 CV_acceleration/CV_acceleration.gprj.user
 CV_acceleration/impl
 CV_acceleration/dsim_work
+CV_acceleration/pulseview
 mdc_config.yml
 mdc_ignore
 *.mdc
